[package]
name = "hyper-json-stream"
version = "0.2.0"
authors = ["Arnaud Poullet <arnaudpoullet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["client","http2"] }
hyper-util = { version = "0.1.3", features = ["client-legacy","http2"] }
serde = "1.0.197"
serde_json = "1.0.114"


[dev-dependencies]
hyper = "1.2.0"
hyper-rustls = {  version = "0.26.0", features = ["http2"] }
serde = { version = "1.0.197", features = ["derive"] }
futures-util = "0.3.30"
tokio = { version = "1.36.0", features = ["rt","macros","rt-multi-thread"] }


[[example]]
name = "countries"
